spacing fix on homepage

--- a/styles.css
+++ b/styles.css
@@ -680,6 +680,7 @@ a.read-more:hover {
       float: right;
       margin-left: 2%;
       width: 32%;
+      padding-top: 4rem;
     }
     .story-titles ul {
         padding: 0 0 0 1rem;
@@ -704,7 +705,7 @@ a.read-more:hover {
       font-size: 0.8rem;
       color:#C99534;
       display: block;
-      padding: 0;
+      padding-top: .25rem;
       text-align: left;
       text-transform: uppercase;
       width: 100%;
@@ -1061,7 +1062,7 @@ a.read-more:hover {
       padding-top: 1rem;
     }
 
-  
+
 
 }
 
